# comics-finder-api

./: Dockerfile  README.md  README.rst  pyproject.toml
comics_finder_api/: manage.py
comics_finder_api/comics/: admin.py  models.py  serializers.py  urls.py  views.py
comics_finder_api/comics/migrations/: 0001_initial.py
comics_finder_api/comics_finder_api/: asgi.py  settings.py  urls.py  wsgi.py
comics_finder_api/comics_finder_api/settings/: dev.py  prod.py
tests/: test_comics_finder_api.py
